@@ -6,3 +6,8 @@ copyright_year   = 2010
 
 [@LEONT]
 install_tool = eumm
+-remove = PodCoverageTests
+[RemovePrereqs]
+remove = Thread::SigMask
+[Prereqs / RuntimeRecommends]
+Thread::SigMask = 0
